--- a/web/index.html
+++ b/web/index.html
@@ -58,7 +58,8 @@
 			<h2>Download</h2>
 			<p>
 			Download ##library.name## version ##library.prettyVersion## (##library.version##) in 
-			<a href="./download/##library.name##-##library.version##.zip">.zip format</a>.
+			<!-- <a href="./download/##library.name##-##library.version##.zip">.zip format</a>. -->
+			<a href="https://github.com/downloads/WrongEntertainment/csvP5/csvP5.zip">.zip format</a>.
 			</p>
 			<h2>Installation</h2>
 			<p>
