added description and table sketches

--- a/web/index.html
+++ b/web/index.html
@@ -47,8 +47,17 @@
 			<p>
 			##library.sentence##<br>
 			##library.paragraph##<br>
-			Feel free to replace this paragraph with a description of the library.<br>
-			Contributed libraries are developed, documented, and maintained by members of the Processing community. Further directions are included with each library. For feedback and support, please post to the Discourse. We strongly encourage all libraries to be open source, but not all of them are.
+			Processing Library for reading CSV(Character Separated Values) Files.<br><br>
+			"The use of tables is pervasive throughout all communication, research and data analysis. Tables appear in print media, handwritten notes, computer software, architectural ornamentation, traffic signs and many other places. The precise conventions and terminology for describing tables varies depending on the context. Further, tables differ significantly in variety, structure, flexibility, notation, representation and use.<br>
+			A table consists of an ordered arrangement of rows and columns. This is a simplified description of the most basic kind of table. Certain considerations follow from this simplified description:
+			<ui>
+				<li>the term row has several common synonyms (e.g., record, k-tuple, n-tuple, vector);</li>
+				<li>the term column has several common synonyms (e.g., field, parameter, property, attribute);</li>
+				<li>a column is usually identified by a name;</li>
+				<li>a column name can consist of a word, phrase or a numerical index;</li>
+				<li>the intersection of a row and a column is a cell.</li>
+			</ui><br>
+			The elements of a table may be grouped, segmented, or arranged in many different ways, and even nested recursively. Additionally, a table may include metadata, annotations, header,[6] footer or other ancillary features."<br>Source: <a href="http://en.wikipedia.org/wiki/Table_(information)">wikipedia</a>
 			</p>
 			</div>
 			
@@ -81,9 +90,54 @@
 			<p><ul>
 			##examples##
 			</ul></p>
-			<h2>Using different csv table types</h2>
+			<h2>Using different CSV table types</h2>
+			<table>
+				<tr>
+					<td><img src="files/img/1d_row.jpg" width="50%"></td>
+					<td valign="top">
+						<br><b>1 Dimensional table (columns)</b><br>
+						This table type contains one column and n* rows.
+					</td>
+				</tr>
+				<tr>
+					<td><img src="files/img/1d_col.jpg" width="50%"></td>
+					<td valign="top">
+						<br><b>1 Dimensional table (rows)</b><br>
+						This table type contains one row and n* columns.
+					</td>
+				</tr>
+				<tr>
+					<td><img src="files/img/2d.jpg" width="50%"></td>
+					<td valign="top">
+						<br><b>Multidimensional table</b><br>
+						This table type contains n* rows/columns.
+					</td>
+				</tr>
+				<tr>
+					<td><img src="files/img/1d_row_head.jpg" width="50%"></td>
+					<td valign="top">
+						<br><b>1 Dimensional table with Header (columns)</b><br>
+						Same as 1 Dimensional table plus header columns.
+					</td>
+				</tr>
+				<tr>
+					<td><img src="files/img/1d_col_head.jpg" width="50%"></td>
+					<td valign="top">
+						<br><b>1 Dimensional table with Header (rows)</b><br>
+						Same as 1 Dimensional table plus header rows.
+					</td>
+				</tr>
+				<tr>
+					<td><img src="files/img/2d_head.jpg" width="50%"></td>
+					<td valign="top">
+						<br><b>Multidimensional table with Header</b><br>
+						Same as Multidimensional table plus header rows/columns.
+					</td>
+				</tr>
+			</table>
 			<div class="tableSample">
 			Different Table Examples:<br><br>
+			
 				Content of all rows/cols has the same data type (integer, float, string, boolean)<br><br>
 				<table width="100%" style="background: #ccc;">
 			  		<tr><td>VAL 11</td><td>VAL 12</td><td>VAL 13</td><td>VAL 14</td><td>VAL 15</td></tr>
