added header image

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,7 @@
 	<div id="container">
 	
 		<div id="header">
+			<img src="files/img/header.jpg">
 			<h1>##library.name##</h1>
 		</div>
 		
@@ -49,6 +50,7 @@
 			##library.paragraph##<br>
 			Processing Library for reading CSV(Character Separated Values) Files.<br><br>
 			"The use of tables is pervasive throughout all communication, research and data analysis. Tables appear in print media, handwritten notes, computer software, architectural ornamentation, traffic signs and many other places. The precise conventions and terminology for describing tables varies depending on the context. Further, tables differ significantly in variety, structure, flexibility, notation, representation and use.<br>
+			<br>
 			A table consists of an ordered arrangement of rows and columns. This is a simplified description of the most basic kind of table. Certain considerations follow from this simplified description:
 			<ui>
 				<li>the term row has several common synonyms (e.g., record, k-tuple, n-tuple, vector);</li>
