--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div id="download" class="clear">
 			<h2>Download</h2>
 			<p>
-			Download csvP5 version 0.1.1 (1) in 
+			Download csvP5 version 0.1.2 (1) in 
 			<!-- <a href="./download/csvP5-1.zip">.zip format</a>. -->
 			<a href="https://github.com/downloads/WrongEntertainment/csvP5/csvP5.zip">.zip format</a>.
 			</p>
@@ -90,7 +90,7 @@
 			<h2>Examples</h2>
 			<p>Find a list of examples in the current distribution of csvP5, or have a look at them by following the links below.</p>
 			<p><ul>
-			<li><a href="examples/csvP5mathUtils/csvP5mathUtils.pde">csvP5mathUtils</a></li> <li><a href="examples/csvP5simple/csvP5simple.pde">csvP5simple</a></li> <li><a href="examples/csvP5simpleWithHeadline/csvP5simpleWithHeadline.pde">csvP5simpleWithHeadline</a></li> 
+			<li><a href="examples/csvP5simple/csvP5simple.pde">csvP5simple</a></li> <li><a href="examples/csvP5simpleWithHeadline/csvP5simpleWithHeadline.pde">csvP5simpleWithHeadline</a></li> 
 			</ul></p>
 			<h2>Using different CSV table types</h2>
 			<table>
