update processing version

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 			<strong>Platform</strong> osx,windows
 			
 			<!-- which processing version did you use for testing your library? -->
-			<br /><strong>Processing</strong> 1.5
+			<br /><strong>Processing</strong> 2.0b7
 			
 			<!-- does your library depend on any other library or framework? -->
 			<br /><strong>Dependencies</strong> ?
@@ -253,7 +253,7 @@
 		</div>
 		
 		<div id="footer">
-			<p>by Tim Pulver, Paul Vollmer, (C) 2012.</p>
+			<p>by Tim Pulver, Paul Vollmer, (C) 2012-2013.</p>
 		</div>
 	</div>
 </body>
