--- a/web/index.html
+++ b/web/index.html
@@ -70,7 +70,7 @@
 			<p>
 			Download ##library.name## version ##library.prettyVersion## (##library.version##) in 
 			<!-- <a href="./download/##library.name##-##library.version##.zip">.zip format</a>. -->
-			<a href="https://github.com/downloads/WrongEntertainment/csvP5/csvP5.zip">.zip format</a>.
+			<a href="https://csvp5.googlecode.com/files/csvP5.zip">.zip format</a>.
 			</p>
 			<h2>Installation</h2>
 			<p>
