--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<p>
 			Download csvP5 version 0.1.2b (1) in 
 			<!-- <a href="./download/csvP5-1.zip">.zip format</a>. -->
-			<a href="https://github.com/downloads/WrongEntertainment/csvP5/csvP5.zip">.zip format</a>.
+			<a href="https://csvp5.googlecode.com/files/csvP5.zip">.zip format</a>.
 			</p>
 			<h2>Installation</h2>
 			<p>
